--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "express": "^4.15.3",
+    "fs": "^0.0.1-security",
     "http": "^0.0.0",
+    "node-uuid": "^1.4.8",
     "path": "^0.12.7"
   },
   "babel": {
