--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^2.0.3",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "body-parser": "^1.18.1",
     "express": "^4.15.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.0",
+    "moment": "^2.18.1",
     "node-uuid": "^1.4.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "zip-local": "^0.3.4"
   },
   "babel": {
     "presets": [
